[package]
name = "plan-rust"
version = "0.1.0"
authors = ["Q <q@misell.cymru>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
multiboot2 = "0.8.0"
volatile = "0.2.3"
spin = "0.4.9"
x86_64 = "0.7.0"
once = "0.3.3"
pic8259_simple = "0.1.1"
pc-keyboard = "0.3.1"

[dependencies.lazy_static]
version = "1.3.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"