[package]
name = "plan-rust"
version = "0.1.0"
authors = ["Q <q@misell.cymru>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
bitflags = "1"
multiboot2 = "0.8"
volatile = "0.2"
spin = "0.4"
x86_64 = "0.7"
once = "0.3"
pic8259_simple = "0.1"
pc-keyboard = "0.3"
byteorder = { version = "1", default-features = false }
lazy_static = { version = "1", features = ["spin_no_std"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"